# CreatorStripXml

./: .gitignore  CGraphicsItem.cpp  CGraphicsItem.h  CMainWidget.cpp  CMainWidget.h  CMakeLists.txt  CStripLoader.cpp  CStripLoader.h  CWdgScene.cpp  CWdgScene.h  CWdgSelectionMenu.cpp  CWdgSelectionMenu.h  CreatorStripXml_ru_RU.ts  GlobalSettings.cpp  GlobalSettings.h  README.md  StableDeclaration.h  StripItem.h  cmainwidget.ui  main.cpp
Galaxy/: CItemInfoGetter.cpp  CItemInfoGetter.h
